# lab5

./: CMakeLists.txt  DatabaseManager.h  SyncWorker.h  main.cpp  mainwindow.cpp  mainwindow.h
lab5serve/: CMakeLists.txt
